Error/Interface/Example/Pods/Target Support Files/TuringErrorInterface/TuringErrorInterface-dummy.m
#import <Foundation/Foundation.h>
@interface PodsDummy_TuringErrorInterface : NSObject
@end
@implementation PodsDummy_TuringErrorInterface
@end
